<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="#489cd9"
    tools:context="com.example.thadaninilesh.androidmysqlapp.Register"
    android:visibility="visible"
    android:focusableInTouchMode="false">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reg_form"
        android:fontFamily="Sans"
        android:textSize="35dp"
        android:textAlignment="center"
        android:textColor="#fffdfd"
        android:textStyle="bold|normal"
        android:typeface="monospace"
        android:visibility="visible" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/name"
        android:fontFamily="Sans"
        android:hint="@string/name"
        android:layout_margin="10dp" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/new_user_name"
        android:fontFamily="Sans"
        android:hint="@string/username"
        android:layout_margin="10dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/new_user_pass"
        android:fontFamily="Sans"
        android:hint="@string/password"
        android:layout_margin="10dp"
        android:inputType="textPassword"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="userReg"
        android:text="@string/register"
        android:layout_margin="10dp"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="userLogin"
        android:text="@string/login"
        android:layout_margin="10dp"
        android:layout_gravity="center_horizontal"

        android:focusableInTouchMode="true" />

</LinearLayout>