<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="#489cd9"
    tools:context="com.example.thadaninilesh.androidmysqlapp.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/log_form"
        android:textSize="35dp"
        android:fontFamily="Sans"
        android:textStyle="bold"
        android:textAlignment="center"
        android:id="@+id/login_heading"
        android:textIsSelectable="false"
        android:textColor="#ffffff" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:textSize="15dp"
        android:fontFamily="sans"
        android:layout_marginTop="20dp"
        android:id="@+id/user_name"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:textSize="15dp"
        android:fontFamily="sans"
        android:id="@+id/user_pass"
        android:layout_marginTop="15dp"
        android:inputType="textPassword"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="20dp"
        android:layout_gravity="center_horizontal"
        android:onClick="userLogin"
        android:id="@+id/b1" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textSize="20dp"
        android:id="@+id/b2"
        android:onClick="userReg"
        android:layout_alignTop="@+id/b1"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="40dp"
        android:layout_gravity="center_horizontal"
        android:textSize="20dp"
        android:textColor="#ffffff"
        android:id="@+id/message"/>

</LinearLayout>

